data/derived/sp14/progs/unify/prog1740.ml.out
Characters 22-52:
  let _ = Printf.printf (Printf.sprintf "%*s" 3 "moo");;
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         ('a, out_channel, unit) format =
           ('a, out_channel, unit, unit, unit, unit)
           CamlinternalFormatBasics.format6
